--- a/src/components/Footer/Newsletter/Newsletter.scss
+++ b/src/components/Footer/Newsletter/Newsletter.scss
@@ -49,6 +49,53 @@
       height: 40px;
       border-radius: 0;
       border: 1px solid rgba(0, 0, 0, 0.2);
+      padding: 0 12px;
+      font-size: 16px;
+      outline: 0;
+
+      @include md {
+        width: 300px;
+      }
+    }
+    button {
+      outline: 0;
+      border: 0;
+      height: 40px;
+      width: 100px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      font-size: 16px;
+      color: white;
+      background-color: #8e2de2;
+      border-bottom: 3px solid #8e2de2;
+
+      @include md {
+        width: 120px;
+      }
+    }
+  }
+
+  .text {
+    margin-bottom: 20px;
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.5);
+  }
+
+  .social-icons {
+    display: flex;
+    gap: 10px;
+
+    .icons {
+      width: 30px;
+      height: 30px;
+      background-color: rgba(0, 0, 0, 0.8);
+      color: white;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   }
 }
