--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -60,6 +60,33 @@
         }
       }
     }
+
+    .empty-cart {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+      margin-top: 100px;
+      svg {
+        font-size: 120px;
+        opacity: 0.1;
+      }
+
+      .return-cta {
+        outline: 0;
+        border: 0;
+        height: 40px;
+        width: 150px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        font-size: 14px;
+        color: white;
+        background-color: #8e2de2;
+        border-bottom: 3px solid #6516aa;
+      }
+    }
   }
 }
 
