--- a/src/components/Header/Search/Search.scss
+++ b/src/components/Header/Search/Search.scss
@@ -55,6 +55,70 @@
       }
     }
   }
+
+  .search-result-content {
+    max-width: calc(100% - 20px);
+    margin: 0 auto;
+
+    @include md {
+      max-width: 800px;
+    }
+
+    .search-results {
+      height: calc(100vh - 110px);
+      overflow: auto;
+      margin: 20px 0;
+
+      @include md {
+        height: calc(100vh - 160px);
+      }
+
+      .search-result-item {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        padding: 10px 0;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+        cursor: pointer;
+
+        .img-container {
+          background-color: rgba(0, 0, 0, 0.05);
+          width: 60px;
+          height: 60px;
+          flex-shrink: 0;
+
+          img {
+            width: 100%;
+            height: 100%;
+          }
+        }
+
+        .prod-details {
+          overflow: hidden;
+
+          .name {
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+            font-size: 16px;
+            line-height: 1;
+            margin-bottom: 10px;
+            font-weight: 600;
+            display: block;
+          }
+          .desc {
+            font-size: 14px;
+            line-height: 1;
+            display: block;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+            color: rgba(0, 0, 0, 0.5);
+          }
+        }
+      }
+    }
+  }
 }
 
 @keyframes slideSearchWindow {
